--- a/index.html
+++ b/index.html
@@ -386,12 +386,12 @@
 				<div class="banner-eye">
 					<div class="banner-boby">
 						<ul class="page">
-							<li><a href="html/details.html"><img src="img/banner/res19117.jpg" /></a></li>
-							<li><a href="html/details.html"><img src="img/banner/res19219.jpg" /></a></li>
-							<li><a href="html/details.html"><img src="img/banner/res19244.jpg" /></a></li>
-							<li><a href="html/details.html"><img src="img/banner/res19346.jpg" /></a></li>
-							<li><a href="html/details.html"><img src="img/banner/res19454.jpg" /></a></li>
-							<li><a href="html/details.html"><img src="img/banner/res19488.jpg" /></a></li>
+							<li><a href="html/details.html"><img src="img/ban/res19117.jpg" /></a></li>
+							<li><a href="html/details.html"><img src="img/ban/res19219.jpg" /></a></li>
+							<li><a href="html/details.html"><img src="img/ban/res19244.jpg" /></a></li>
+							<li><a href="html/details.html"><img src="img/ban/res19346.jpg" /></a></li>
+							<li><a href="html/details.html"><img src="img/ban/res19454.jpg" /></a></li>
+							<li><a href="html/details.html"><img src="img/ban/res19488.jpg" /></a></li>
 						</ul>			
 					</div>
 					<ol class="page-move">
@@ -418,17 +418,17 @@
 				</div>
 				<div class="ban-tit2">
 					<ul>
-						<li><a href="html/details.html"><img src="img/banner/life_ico1.png"/><span>充话费</span></a></li>
-						<li><a href="html/details.html"><img src="img/banner/life_ico2.png"/><span>游戏</span></a></li>
-						<li><a href="html/details.html"><img src="img/banner/life_ico7.png"/><span>固话</span></a></li>
-						<li><a href="html/details.html"><img src="img/banner/life_ico4.png"/><span>电费</span></a></li>
-						<li><a href="html/details.html"><img src="img/banner/life_ico5.png"/><span>水费</span></a></li>
-						<li><a href="html/details.html"><img src="img/banner/life_ico6.png"/><span>燃气费</span></a></li>
-						<li><a href="html/details.html"><img src="img/banner/life_ico11.png"/><span>冲流量</span></a></li>
-						<li><a href="html/details.html"><img src="img/banner/life_ico12.png"/><span>加油卡</span></a></li>
-						<li><a href="html/details.html"><img src="img/banner/life_ico10.png"/><span>礼品卡</span></a></li>
+						<li><a href="html/details.html"><img src="img/ban/life_ico1.png"/><span>充话费</span></a></li>
+						<li><a href="html/details.html"><img src="img/ban/life_ico2.png"/><span>游戏</span></a></li>
+						<li><a href="html/details.html"><img src="img/ban/life_ico7.png"/><span>固话</span></a></li>
+						<li><a href="html/details.html"><img src="img/ban/life_ico4.png"/><span>电费</span></a></li>
+						<li><a href="html/details.html"><img src="img/ban/life_ico5.png"/><span>水费</span></a></li>
+						<li><a href="html/details.html"><img src="img/ban/life_ico6.png"/><span>燃气费</span></a></li>
+						<li><a href="html/details.html"><img src="img/ban/life_ico11.png"/><span>冲流量</span></a></li>
+						<li><a href="html/details.html"><img src="img/ban/life_ico12.png"/><span>加油卡</span></a></li>
+						<li><a href="html/details.html"><img src="img/ban/life_ico10.png"/><span>礼品卡</span></a></li>
 					</ul>
-					<a href="html/details.html"><img src="img/banner/res19372.png"/></a>
+					<a href="html/details.html"><img src="img/ban/res19372.png"/></a>
 				</div>
 			</div>
 			</div>
